@@ -12,5 +12,5 @@ set TZData(:Asia/Karachi) {
     {1212260400 21600 1 PKST}
     {1225476000 18000 0 PKT}
     {1239735600 21600 1 PKST}
-    {1257012000 18000 0 PKT}
+    {1254333600 18000 0 PKT}
 }
